--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
   "require": {
     "php":             ">=5.4.0",
     "symfony/yaml":    ">=2.7",
-    "vlucas/valitron": "~1.2"
+    "vlucas/valitron": "~1.2",
+    "sabre/xml": "^2.1"
   },
 
   "require-dev": {
