--- a/src/Request/schema/createNewJob.yml
+++ b/src/Request/schema/createNewJob.yml
@@ -3,8 +3,8 @@ defaults:
   _skip_blank: true
 
 properties:
-  integrationHeader:
-    _include: integrationHeader
+  credentials:
+    _include: credentials
     
   request:
     job:
