--- a/src/Response/schema/cancelJob.yml
+++ b/src/Response/schema/cancelJob.yml
@@ -1,27 +1,27 @@
 properties:
   META:
     success:
-      _extract: completedCancelInfo/status/status/statusCode/code
-      _post_filter: { isEqual: 'Cancelled' }
-    
-    security:
-      _include: integrationHeader
-
-    messages:
-      _include: integrationFooter
+      _extract: status/_attrs/code
+      _post_filter: { isEqual: 'OK' }
 
 
   RESPONSE:
-    status:
-      _extract: completedCancelInfo/status/status/statusCode/code
+    id:
+      _extract: response/_attrs/id
 
-    updated:
-      _extract: completedCancelInfo/status/validFrom
-      _post_filter: ObjectifyDate
+  ERRORS:
+    code:
+      rejection:
+        _extract: response/_content/status/_attrs/errorCode
+      xml:
+        _extract: status/_attrs/errorCode
+    message:
+      rejection:
+        _extract: response/_content/niceError/_content
+      xml:
+        _extract: status/_content
 
-    cancelled_shipments:
-      _extract: completedCancelInfo/completedCancelShipments/shipmentNumber
-      _multiple: true
+
 
 
 
