--- a/tests/resources/requests/cancelJob.yml
+++ b/tests/resources/requests/cancelJob.yml
@@ -10,6 +10,10 @@ valid:
 
 
   expect:
+    _wrap: 
+      ndxml:
+        _attrs:
+          version: 2
     credentials:
       identity: username
       password: password
