--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "php":             ">=5.4.0",
     "symfony/yaml":    ">=2.7",
     "vlucas/valitron": "~1.2",
-    "sabre/xml": "^2.1"
+    "sabre/xml": "^1.5 || ^2.1",
+    "guzzlehttp/guzzle": "^6.3"
   },
 
   "require-dev": {
